# MultiRobotExplorationPackages

./: .gitignore  LICENSE  README.md
adaptive_local_planner/: CMakeLists.txt  adaptive_local_planner_plugin.xml
adaptive_local_planner/launch/: carto_simple_exploration_on_bag.launch  simple_exploration.launch  simple_exploration_gmapping.launch  simple_exploration_karto.launch  turtlebot_in_stage.launch
adaptive_local_planner/launch/includes/: adaptive_local_planner.yaml  adaptive_planner.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base.launch.xml  move_base_params.yaml  pf_local_planner.yaml
adaptive_local_planner/rviz/: robot_navigation.rviz
adaptive_local_planner/sim/: diamap.pgm  diamap.world  diamap.yaml  map.world  maze.world  sim.sh  turtlebot.inc
adaptive_local_planner/src/: adaptive_local_planner.cpp  adaptive_local_planner.h  pf_local_planner.cpp  pf_local_planner.h  simple_ccl.cpp  simple_ccl.h
adaptive_local_planner/src/3rd/: map_ray_caster.h  mapbuilder.cpp  mapbuilder.h  ray_caster_utils.h
adaptive_local_planner/src/vmap/: data.cpp  data.h  float2.h  impact.cpp  int2.h  ogmap.h  rosvmap.cpp  shape.h  visimap.h
dslam/src/mapping/: Mapping.cpp  Mapping.h
flir_one_node/: CMakeLists.txt  package.xml
flir_one_node/src/: Makefile  flir8k.c  index.html  start1.sh
frontier_allocation/: CMakeLists.txt
frontier_allocation/src/: frontier_allocation.cpp  frontier_detection.cpp
gazebo_sim/launch/: rsload.sh  simulation_cartographer.launch  simulation_gmapping.launch  simulation_karto.launch  willowgarage_world_cartographer.launch  willowgarage_world_gmapping.launch
gazebo_sim/launch/includes/: carto_view.rviz  indoor.world  turtlebot_urg_lidar_2d.lua
gazebo_sim/results/: .~lock.metric.ods#  metric.ods  metric.py  real_exp.ods
gazebo_sim/results/cartographer/exp/: cartographer_n.rst.csv  cartographer_n_def.ods
gazebo_sim/results/gmapping/exp/: slam_gmapping.ods
gazebo_sim_base/launch/: simulation.launch
inria_demo/: README.md
inria_demo/launch/: navigating_sim.launch
map_merging/: CMakeLists.txt  package.xml
map_merging/launch/: map_merging.launch
map_merging/src/: map_merging.cpp
map_receive/: CMakeLists.txt  package.xml
map_receive/launch/: map_receive.launch
map_receive/src/: map_receive.cpp
map_receive_torob/: CMakeLists.txt  package.xml
map_receive_torob/include/margent/: array.h  collection.h  data.h  fsm.h  matrice.h
map_receive_torob/include/siplen/: float2.h  int2.h  link.h  localmodel.h  particle.h  shape.h  visibility.h  visimap.h
map_receive_torob/launch/: map_receive_torob.launch
map_receive_torob/src/: map_receive_torob.cpp
map_send/: CMakeLists.txt  package.xml
map_send/include/map_send/: UDPCom.h
map_send/launch/: map_send.launch
map_send/src/: UDPCom.cpp  map_send.cpp
map_send_torob/: CMakeLists.txt  package.xml
map_send_torob/include/margent/: agent.h  environment.h  global.h  graph.h
map_send_torob/include/siplen/: ogmap.h
map_send_torob/launch/: map_send_torob.launch  run_map_send.launch
map_send_torob/src/: map_send_torob.cpp
multi_master_bridge/: CMakeLists.txt  README.md
multi_master_bridge/src/: map_feeding.cpp
multi_master_bridge/src/bridge/: portal.cpp
multi_master_bridge/src/helpers/: DataConsumer.cpp
multi_merge/launch/: cartographer_minimal.launch  exploration.rviz  move_base.launch  single_exploration.launch  tcp_inter_robot_exploration.launch
multi_merge/src/: greedy_merging.cpp  map_threshold.cpp  probabilistic_merging.cpp  probabilistic_merging_ex.cpp
multi_merge/yaml/: global_costmap.yaml  local_costmap.yaml  trajectory_planner_turtlebot.yaml
pharos_probabilistic_merging/: README.md
pose_publisher/launch/: pose_publisher.launch
pose_publisher/src/: pose_publisher.cpp
simple_exploration/: CMakeLists.txt  README.md  package.xml
simple_exploration/launch/: demo_exploration_robulab.launch  phrontiers.launch  phrontiers_only.launch  simple_exploration_minimal.launch  simple_exploration_old_tf_demo.launch  simple_exploration_turtlebot.launch  torob_exploration_turtlebot.launch
simple_exploration/src/: simple_exploration.cpp
simple_exploration_multi_robot/: CMakeLists.txt  package.xml
simple_exploration_multi_robot/launch/: costmap_only.launch  cpuram.sh  demo_exploration_robulab.launch  explore  explore_torob  frames.gv  launch_explor.launch  multi_robot.launch  multi_robot_torob.launch  net.sh  netbandwidth.sh  phrontiers.launch  robot_with_tf.launch  simple_exploration_multi_turtlebot.launch  simple_exploration_multi_turtlebot_torob.launch  simple_exploration_turtlebot.launch
simple_exploration_multi_robot/param/: costmap_for_exploration_global_param.yaml
simple_exploration_multi_robot/rviz_cfg/: gmapping-movebase_multi_robot.rviz
simple_exploration_multi_robot/src/: simple_exploration_multi_robot.cpp
simple_exploration_multi_robot/yaml/: global_costmap.yaml  local_costmap.yaml  trajectory_planner_turtlebot.yaml
torob/: CMakeLists.txt  package.xml
torob/launch/: gmapping.launch  gmapping_explore.launch  merge_test.launch  net_receive.launch  net_send.launch  random_goal.launch  random_move.launch  remote_control.launch  sandbox.launch  tmp.launch  torob_exploration_turtlebot.launch
torob/map/: map_14.vmap
torob/src/: .directory  color.h  float2.cpp  frame.cpp  frame.h  impact.h  main_explore.cpp  main_map_to_vmap.cpp  main_merge.cpp  main_move.cpp  main_net_receive.cpp  main_net_send.cpp  main_random_goal.cpp  main_ring_move.cpp  main_sandbox.cpp  main_scan_to_vmap.cpp  main_viewer.cpp  main_vmap_move.cpp  main_vmap_server.cpp  main_vmap_to_map.cpp  map_publisher.cpp  map_publisher.h  moinag.cpp  moinag.h  net.cpp  net.h  ogmap.cpp  ring.cpp  ring.h  roscontrol.cpp  roscontrol.h  rosvmap.cpp  rosvmap.h  tools.h  visimap.cpp  visimap.h
torob/web/: app.js  camera.js  index.html  map.js  menu.html  status.js  style.css  viewer.js  vmap.js
torob_msgs/: CMakeLists.txt  package.xml
torob_msgs/msg/: Data.msg  Edge.msg  Node.msg  Ring.msg  VectorMap.msg
(+4 files in other folders)
